<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="movieDetailsViewModel"
            type="com.mania.movie.main.details.presenter.MovieDetailsViewModel" />

        <variable
            name="movieDetailsModel"
            type="com.mania.movie.main.details.repository.model.MovieDetailModel" />

        <variable
            name="snackBarConfig"
            type="com.mania.movie.binding.SnackbarConfiguration" />

        <variable
            name="toolbarConfig"
            type="com.mania.movie.binding.ToolbarConfiguration" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:snackBarBinding="@{snackBarConfig}">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_layout"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginBottom="94dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@{movieDetailsModel.name}">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{movieDetailsModel.poster}"
                    android:tint="#4D000000"
                    app:layout_collapseMode="parallax" />

                <include
                    layout="@layout/include_toolbar"
                    app:layout_collapseMode="pin"
                    app:toolbarConfig="@{toolbarConfig}" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/profile_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="vertical"
            app:behavior_overlapTop="78dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="4dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="4dp">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/year"
                            style="@style/MovieDetail.Text.Para2"
                            android:text="@string/str_year"
                            android:textAllCaps="true"
                            app:layout_constraintBottom_toBottomOf="@+id/year_value"
                            app:layout_constraintEnd_toStartOf="@+id/year_value"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/year_value" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/year_value"
                            style="@style/MovieDetail.Text.Para1"
                            android:text="@{movieDetailsModel.year}"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/year"
                            tools:text="dsjhjdsjdsgdsgsdghdsghdsgh" />


                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/genre"
                            style="@style/MovieDetail.Text.Para2"
                            android:text="@string/str_genre"
                            android:textAllCaps="true"
                            app:layout_constraintBottom_toBottomOf="@+id/genre_value"
                            app:layout_constraintEnd_toStartOf="@+id/genre_value"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/genre_value" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/genre_value"
                            style="@style/MovieDetail.Text.Para1"
                            android:text="@{movieDetailsModel.genre}"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/genre"
                            app:layout_constraintTop_toBottomOf="@id/year_value"
                            tools:text="dsjhjdsjdsgdsgsdghdsghdsgh" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/plot"
                            style="@style/MovieDetail.Text.Para2"
                            android:text="@string/str_plot"
                            android:textAllCaps="true"
                            app:layout_constraintBottom_toBottomOf="@+id/plot_value"
                            app:layout_constraintEnd_toStartOf="@+id/plot_value"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/plot_value" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/plot_value"
                            style="@style/MovieDetail.Text.Para1"
                            android:text="@{movieDetailsModel.plot}"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/plot"
                            app:layout_constraintTop_toBottomOf="@id/genre_value"
                            tools:text="dsjhjdsjdsgdsgsdghdsghdsgh" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/county"
                            style="@style/MovieDetail.Text.Para2"
                            android:text="@string/str_country"
                            android:textAllCaps="true"
                            app:layout_constraintBottom_toBottomOf="@+id/country_value"
                            app:layout_constraintEnd_toStartOf="@+id/country_value"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/country_value" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/country_value"
                            style="@style/MovieDetail.Text.Para1"
                            android:text="@{movieDetailsModel.country}"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/county"
                            app:layout_constraintTop_toBottomOf="@id/plot_value"
                            tools:text="dsjhjdsjdsgdsgsdghdsghdsgh" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/language"
                            style="@style/MovieDetail.Text.Para2"
                            android:text="@string/str_language"
                            android:textAllCaps="true"
                            app:layout_constraintBottom_toBottomOf="@+id/language_value"
                            app:layout_constraintEnd_toStartOf="@+id/language_value"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/language_value" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/language_value"
                            style="@style/MovieDetail.Text.Para1"
                            android:text="@{movieDetailsModel.language}"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/language"
                            app:layout_constraintTop_toBottomOf="@id/country_value"
                            tools:text="dsjhjdsjdsgdsgsdghdsghdsgh" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/director"
                            style="@style/MovieDetail.Text.Para2"
                            android:text="@string/str_director"
                            app:layout_constraintBottom_toBottomOf="@+id/director_value"
                            app:layout_constraintEnd_toStartOf="@+id/director_value"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            android:textAllCaps="true"
                            app:layout_constraintTop_toTopOf="@+id/director_value" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/director_value"
                            style="@style/MovieDetail.Text.Para1"
                            android:text="@{movieDetailsModel.director}"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/director"
                            app:layout_constraintTop_toBottomOf="@id/language_value"
                            tools:text="dsjhjdsjdsgdsgsdghdsghdsgh" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/imdb_rating"
                            style="@style/MovieDetail.Text.Para2"
                            android:text="@string/str_imdb_rating"
                            android:textAllCaps="true"
                            app:layout_constraintBottom_toBottomOf="@+id/imdb_rating_value"
                            app:layout_constraintEnd_toStartOf="@+id/imdb_rating_value"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/imdb_rating_value" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/imdb_rating_value"
                            style="@style/MovieDetail.Text.Para1"
                            android:text="@{movieDetailsModel.imdbRating}"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/imdb_rating"
                            app:layout_constraintTop_toBottomOf="@id/director_value"
                            tools:text="dsjhjdsjdsgdsgsdghdsghdsgh" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/imdb_votes"
                            style="@style/MovieDetail.Text.Para2"
                            android:text="@string/str_votes"
                            android:textAllCaps="true"
                            app:layout_constraintBottom_toBottomOf="@+id/imdb_votes_value"
                            app:layout_constraintEnd_toStartOf="@+id/imdb_votes_value"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/imdb_votes_value" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/imdb_votes_value"
                            style="@style/MovieDetail.Text.Para1"
                            android:text="@{movieDetailsModel.imdbVotes}"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/imdb_votes"
                            app:layout_constraintTop_toBottomOf="@id/imdb_rating_value"
                            tools:text="dsjhjdsjdsgdsgsdghdsghdsgh" />

                        <android.support.v7.widget.CardView
                            android:id="@+id/circular_progress"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginTop="32dp"
                            android:shape="ring"
                            app:cardBackgroundColor="?attr/colorPrimaryDark"
                            app:cardCornerRadius="24dp"
                            app:elevation="8dp"
                            android:visibility="@{movieDetailsViewModel.loadingBinding ? View.GONE : View.VISIBLE}"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="parent">

                            <android.support.v4.widget.ContentLoadingProgressBar
                                style="?android:attr/progressBarStyleLarge"
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:layout_gravity="center" />

                        </android.support.v7.widget.CardView>


                    </android.support.constraint.ConstraintLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>
</layout>